fixed spacing

--- a/about/style.css
+++ b/about/style.css
@@ -102,7 +102,7 @@ font: 40px Trebuchet MS;
   transform: translateY(40px);
   text-align: center;
     background-color: #27292b;
-  width: 650px;
+  width: 300px;
    margin: auto;
     border-radius: 10px;
      padding: 10px;
